# -*- Mode: Makefile -*-
#
# Makefile.am - docs automake file for Redland
#
# $Id$
#
# Copyright (C) 2000-2005, David Beckett http://purl.org/net/dajobe/
# Institute for Learning and Research Technology http://www.ilrt.bristol.ac.uk/
# University of Bristol, UK http://www.bristol.ac.uk/
# 
# This package is Free Software and part of Redland http://librdf.org/
# 
# It is licensed under the following three licenses as alternatives:
#   1. GNU Lesser General Public License (LGPL) V2.1 or any newer version
#   2. GNU General Public License (GPL) V2 or any newer version
#   3. Apache License, V2.0 or any newer version
# 
# You may not use this file except in compliance with at least one of
# the above three licenses.
# 
# See LICENSE.html or LICENSE.txt at the top of this package for the
# complete terms and further detail along with the license texts for
# the licenses in COPYING.LIB, COPYING and LICENSE-2.0.txt respectively.
# 
# 


# The name of the module.
DOC_MODULE=redland

# The top-level SGML file.
DOC_MAIN_SGML_FILE=redland-docs.xml

# Extra options to supply to gtkdoc-scan
SCAN_OPTIONS=--deprecated-guards="REDLAND_DISABLE_DEPRECATED"

# The directory containing the source code. Relative to $(srcdir)
DOC_SOURCE_DIR=../librdf

# Used for dependencies
HFILE_GLOB=$(top_srcdir)/librdf/*.h
CFILE_GLOB=$(top_srcdir)/librdf/*.c

IGNORE_CFILES= \
	rdf_hash_bdb.c \
	rdf_hash_memory.c \
	rdf_model_storage.c \
	rdf_storage_hashes.c \
	rdf_storage_list.c

# Headers to ignore
IGNORE_HFILES= \
	librdf.h \
	rdf_config.h \
	rdf_init_internal.h \
	rdf_internal.h \
	rdf_types.h \
	rdf_uri_internal.h \
	redland.h \
	win32_rdf_config.h \
	$(IGNORE_CFILES)

# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
AM_CPPFLAGS = -DREDLAND_INTERNAL -I$(srcdir)/librdf
GTKDOC_LIBS =

# Extra options to supply to gtkdoc-mkdb
MKDB_OPTIONS=--sgml-mode --output-format=xml

# Extra options to supply to gtkdoc-mktmpl
MKTMPL_OPTIONS=

# Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
content_files =	\
	redland-intro.xml

# Images to copy into HTML directory
HTML_IMAGES =

# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS=

include $(top_srcdir)/gtk-doc.make

man_MANS=redland.3

EXTRA_DIST+=README.html README \
storage.html \
build-docs \
api \
redland.pod kernel-doc \
$(man_MANS)

CLEANFILES+=README pod2htm*
MAINTAINERCLEANFILES=

PERL=perl

# Create some text files from HTML sources
LYNX=lynx
LYNXARGS=-dump -nolist

#SUFFIXES = .html .txt .ps .pdf .pm .pod .3
#
#.html.txt:
#	$(LYNX) $(LYNXARGS) $< > $@

if MAINTAINER_MODE
redland.3: redland.pod
	pod2man --section=3 --center="Redland RDF Application Framework" \
	--release="`date +%d-%b-%Y`" --date="@PACKAGE@ @PACKAGE_VERSION@" $< | \
	sed -e "s;REDLAND_VERSION_STRING;@PACKAGE_VERSION@;" > $@
	rm -f pod2htm*
endif

README: README.html
	$(LYNX) $(LYNXARGS) $< > $@
